--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ lazy_loader==0.4
 MarkupSafe==3.0.2
 networkx==3.4.2
 numpy==2.2.3
-opencv-python==4.11.0.86
+opencv-python-headless
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
