--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pillow==11.1.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
 scikit-image==0.25.2
+scikit-learn==1.4.2
 scipy==1.15.2
 six==1.17.0
 tifffile==2025.2.18
