--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.11.0
 bcrypt==4.3.0
 blinker==1.9.0
 CacheControl==0.14.2
@@ -55,6 +56,7 @@ six==1.17.0
 threadpoolctl==3.6.0
 tifffile==2025.2.18
 tzdata==2025.1
+tzlocal==5.3.1
 uritemplate==4.1.1
 urllib3==2.3.0
 Werkzeug==3.1.3
